Внесены правки. - В README в инструкцию были добавлены шаги для установки CMake - В CHANGELOG добавлена версия 1.0; - Добавлены CMakeLists файлы для билда; - Исправлен jobs build в ci/cd файле

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,12 @@
+0.1.0 (11.11.23)
+
+- В ci/cd файл добавлена джоба build.
+
 0.0.4 (05.11.23)
 
 - Добавлен Sample-Test. 
 
-- Добавлен ci/cd файл с джобами build и test.
+- Добавлен ci/cd файл с джобами test.
 
 0.0.3 (05.11.23)
 
